# Klaus

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml  update-homebrew.yml
homebrew/: README.md  klaus.rb  update-formula.yml
klaus/: audio.py  brain.py  camera.py  config.py  device_catalog.py  main.py  memory.py  notes.py  query_router.py  search.py  secrets_store.py  stt.py  tts.py
klaus/services/: __init__.py  device_switch.py  question_pipeline.py
klaus/ui/: camera_widget.py  chat_widget.py  main_window.py  session_panel.py  settings_dialog.py  setup_wizard.py  status_widget.py  theme.py
klaus/ui/shared/: __init__.py  key_validation.py  mic_level_monitor.py  relative_time.py
tests/: conftest.py  test_audio.py  test_brain.py  test_camera.py  test_config.py  test_device_catalog.py  test_device_switch_service.py  test_hotkeys_macos.py  test_main_live_device_switch.py  test_memory.py  test_pipeline.py  test_query_router.py  test_question_pipeline_service.py  test_search.py  test_stt.py  test_tts.py
