[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "klaus-assistant"
version = "0.3.0"
description = "Voice-powered research assistant for physical books and papers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.58.0",
    "opencv-python>=4.10.0",
    "numpy>=1.26.0",
    "sounddevice>=0.5.0",
    "pynput>=1.7.6",
    "PyQt6>=6.7.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.4.0",
    "tavily-python>=0.5.0",
    "setuptools",
    "webrtcvad>=2.0.10",
    "moonshine-voice>=0.0.49",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
klaus = "klaus.main:main"

[project.urls]
Homepage = "https://github.com/bgigurtsis/Klaus"
Repository = "https://github.com/bgigurtsis/Klaus"
Issues = "https://github.com/bgigurtsis/Klaus/issues"

[tool.hatch.build.targets.wheel]
packages = ["klaus"]
